--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,5 +1,5 @@
-name: flutter-gallery
-adopt-info: flutter-gallery
+name: flutter-gallery-bugra
+adopt-info: flutter-gallery-bugra
 summary: Flutter Gallery
 description: |
   A demo app for Flutter's material design and cupertino widgets, as well as many other features of the Flutter SDK.
@@ -10,12 +10,6 @@ base: core18
 architectures:
   - build-on: amd64
 
-slots:
-  # for GtkApplication registration
-  flutter-gallery:
-    interface: dbus
-    bus: session
-    name: io.flutter.demo.gallery
 
 apps:
   daemon:
@@ -34,7 +28,7 @@ apps:
       - wayland
       - network
 
-  flutter-gallery:
+  flutter-gallery-bugra:
     command: bin/flutter_gallery
     extensions: [flutter-master]
     plugs:
@@ -42,9 +36,9 @@ apps:
       - network
 
 parts:
-  flutter-gallery:
+  flutter-gallery-bugra:
     source: https://github.com/flutter/gallery.git
-    source-commit: 358fe2dd7daeacc4f5397b2fc91637f79b3d95f8
+    source-commit: 9ac956114204d291959d3efe07196cb6c9bb74a7
     plugin: flutter
     override-pull: |
       snapcraftctl pull
